Fixed search bar on mobile

--- a/src/styles/_homePage.scss
+++ b/src/styles/_homePage.scss
@@ -1,5 +1,11 @@
 @use 'variables' as *;
 
+.search-wrapper{
+    margin-top: 5rem;
+    display: flex;
+    justify-content: center;
+}
+
 .browse-by{
     display: flex;
     justify-content: center;
@@ -8,7 +14,7 @@
     width: 290px;
     box-sizing: content-box;
     margin: 0 auto;
-    margin-top: 5rem;
+    margin-top: 2rem;
     border-radius: 40px;
     margin-bottom: 5rem;
     border: 3px solid $greenColor;
