--- a/src/styles/_searchBar.scss
+++ b/src/styles/_searchBar.scss
@@ -1,9 +1,6 @@
 @use 'variables' as *;
 
 .search-wrapper{
-    margin: 0 auto;
-    margin-top: 3rem;
-    
     .search-bar{
         border: 3px solid $greenColor;
         background-color:white;
